css/styles.css
#navbar {
    display: flex;
    justify-content: left;
    width: 100%;
    background-color: black;
}

#navbar a img {
    height: 80px;
}

#intro {
    display: flex;
    justify-content: center;
    margin-top: 50px;
    margin-bottom: 50px;
}

#info {
    justify-content: center;
    margin: 30px;
}

#game {
    display: flex;
    justify-content: center;
}

#output {
    height: 450px;
    width: 600px;
    border-radius: 0.5em;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#description {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-top: 50px;
    margin-left: 100px;
    margin-right: 100px;
}

@media (min-width: 1000px) {
    #description {
        flex-direction: row;
    }
}

.description-box {
    flex: 1;
    display: flex;
    flex-direction: column;
    margin-top: 20px;
}

.description-logo {
    display: flex;
    justify-content: center;
}

.description-logo img {
    height: 60px;
}

.description-title {
    text-align: center;
    padding-top: 10px;
}

.description-text {
    text-align: center;
    padding-top: 5px;
}

